--- a/A01_Masteer_Math_By_Coding_in_Python/B05_Algebara1/C31_Soving_for_x.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/B05_Algebara1/C31_Soving_for_x.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-10-17T02:59:55.470997Z",
-     "start_time": "2025-10-17T02:59:55.458587Z"
+     "end_time": "2025-10-18T02:27:16.286664Z",
+     "start_time": "2025-10-18T02:27:15.772991Z"
     }
    },
    "source": [
@@ -79,13 +79,13 @@
      ]
     }
    ],
-   "execution_count": 24
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-17T03:00:36.084815Z",
-     "start_time": "2025-10-17T03:00:36.066148Z"
+     "end_time": "2025-10-18T02:27:16.642169Z",
+     "start_time": "2025-10-18T02:27:16.447749Z"
     }
    },
    "cell_type": "code",
@@ -124,13 +124,13 @@
      }
     }
    ],
-   "execution_count": 27
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-17T03:11:25.315687Z",
-     "start_time": "2025-10-17T03:11:25.293191Z"
+     "end_time": "2025-10-18T02:27:16.716252Z",
+     "start_time": "2025-10-18T02:27:16.661526Z"
     }
    },
    "cell_type": "code",
@@ -190,15 +190,20 @@
      }
     }
    ],
-   "execution_count": 44
+   "execution_count": 3
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-18T02:27:16.750099Z",
+     "start_time": "2025-10-18T02:27:16.746833Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": "",
-   "id": "40ecca328cd24f14"
+   "id": "40ecca328cd24f14",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
