--- a/A01_Masteer_Math_By_Coding_in_Python/B05_Algebara1/A00_nameming.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/B05_Algebara1/A00_nameming.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-10-18T04:07:44.000713Z",
-     "start_time": "2025-10-18T04:07:42.171206Z"
+     "end_time": "2025-10-18T05:56:18.756950Z",
+     "start_time": "2025-10-18T05:56:17.883119Z"
     }
    },
    "source": [
@@ -55,11 +55,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C44_Adding_polynomials.ipynb\n"
+      "C47_Factoring_polynomials.ipynb\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 4
   }
  ],
  "metadata": {
