--- a/A01_Masteer_Math_By_Coding_in_Python/A00_nameming.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/A00_nameming.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-10-18T07:27:51.769282Z",
-     "start_time": "2025-10-18T07:27:49.693924Z"
+     "end_time": "2025-10-18T07:47:10.758690Z",
+     "start_time": "2025-10-18T07:46:52.740858Z"
     }
    },
    "source": [
@@ -41,7 +41,7 @@
     "        formatted_name = \"C\" + chapter_name.replace(' ', '_').replace('.', '_')\n",
     "        filename = f\"{formatted_name}.ipynb\"\n",
     "\n",
-    "    return filename.replace(\":\", \"\")\n",
+    "    return filename.replace(\":\", \"\").replace(\"/\", \"_\")\n",
     "\n",
     "# 사용자로부터 단원 이름 입력 받기\n",
     "user_input_chapter_name = input(\"단원 이름을 입력하세요 (예: 43. Solving inequalities): \")\n",
@@ -55,11 +55,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "C50_Plotting_coordinates_on_a_plane_exercise.ipynb\n"
+      "C51_Graphing_lines_part_1_start_end_notation.ipynb\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 11
   }
  ],
  "metadata": {
