--- a/A01_Masteer_Math_By_Coding_in_Python/A00_nameming.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/A00_nameming.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2025-10-20T02:32:21.462693Z",
-     "start_time": "2025-10-20T02:32:18.517257Z"
-    }
+    "collapsed": true
    },
    "source": [
     "def convert_to_notebook_filename(chapter_name):\n",
@@ -50,16 +46,8 @@
     "notebook_filename = convert_to_notebook_filename(user_input_chapter_name)\n",
     "print(f\"{notebook_filename}\")"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C53_Graphing_rational_functions.ipynb\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
