C59_Drawing_patches_with_polygons

--- a/A01_Masteer_Math_By_Coding_in_Python/B06_Graping_Visualization/C57_Making_images_from_matrices.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/B06_Graping_Visualization/C57_Making_images_from_matrices.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-20T05:46:10.915572Z",
-     "start_time": "2025-10-20T05:46:10.669672Z"
+     "end_time": "2025-10-20T07:13:06.672220Z",
+     "start_time": "2025-10-20T07:13:05.770344Z"
     }
    },
    "cell_type": "code",
@@ -27,9 +27,10 @@
     "        A[i, j] = 3*i - 4*j\n",
     "        pp.text(j, i, str(int(A[i, j])), ha='center', va='center')\n",
     "\n",
-    "pp.imshow(A)\n",
     "pp.set_cmap('twilight_shifted')\n",
-    "pp.plot([2, 6], [6, 2], 'r')\n"
+    "pp.plot([2, 6], [6, 2], 'r')\n",
+    "pp.imshow(A)\n",
+    "pp.savefig('hihihi2.pdf')\n"
    ],
    "id": "3d9b31a518409331",
    "outputs": [
@@ -39,16 +40,6 @@
      "text": [
       "(10, 14)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x29e7a861310>]"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
     },
     {
      "data": {
@@ -64,7 +55,7 @@
      }
     }
    ],
-   "execution_count": 31
+   "execution_count": 56
   },
   {
    "metadata": {
