C62_Summation_and_products

--- a/A01_Masteer_Math_By_Coding_in_Python/B07_Algebra2/C62_Summation_and_products.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/B07_Algebra2/C62_Summation_and_products.ipynb
@@ -145,6 +145,49 @@
     }
    ],
    "execution_count": 37
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-21T02:23:40.673268Z",
+     "start_time": "2025-10-21T02:23:40.663001Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "from sympy import symbols, Sum, latex\n",
+    "\n",
+    "i, n = symbols('i n', integer=True)\n",
+    "expr = Sum(i, (i, 1, n))   # 1부터 n까지 i의 합\n",
+    "display(expr)\n",
+    "\n",
+    "expr_sub = expr.subs(n,10).doit()\n",
+    "print(expr_sub)\n"
+   ],
+   "id": "ecdac59e1fb3edd4",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Sum(i, (i, 1, n))"
+      ],
+      "text/latex": "$\\displaystyle \\sum_{i=1}^{n} i$"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "55\n"
+     ]
+    }
+   ],
+   "execution_count": 47
   }
  ],
  "metadata": {
