C63_Differences_(discrete_derivative)

--- a/A01_Masteer_Math_By_Coding_in_Python/B07_Algebra2/C62_Summation_and_products.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/B07_Algebra2/C62_Summation_and_products.ipynb
@@ -162,7 +162,7 @@
     "display(expr)\n",
     "\n",
     "expr_sub = expr.subs(n,10).doit()\n",
-    "print(expr_sub)\n"
+    "print(expr_sub)"
    ],
    "id": "ecdac59e1fb3edd4",
    "outputs": [
