C112_Derivatives_of_polynomials

--- a/A01_Masteer_Math_By_Coding_in_Python/B11_Calculus/C112_Derivatives_of_polynomials.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/B11_Calculus/C112_Derivatives_of_polynomials.ipynb
@@ -151,12 +151,207 @@
    "execution_count": 130
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-10-31T01:02:04.781861Z",
+     "start_time": "2025-10-31T01:02:04.757690Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "9e2efd288e7a466"
+   "source": [
+    "from sympy import symbols, Function, Eq, diff\n",
+    "from IPython.display import Math\n",
+    "\n",
+    "x = symbols('x')\n",
+    "f = Function('f')(x)\n",
+    "g = Function('g')(x)\n",
+    "\n",
+    "fx = 3 + 2*x - 5*x**2 + 7*x**4\n",
+    "gx = 4*x**2 + x**5\n",
+    "\n",
+    "\n",
+    "display(Eq(f, fx), Eq(g, gx))\n",
+    "print()\n",
+    "\n",
+    "display(Math(r\" (f + g)' = f' + g' \"))\n",
+    "display(diff(fx+gx), (diff(fx) + diff(gx)))\n",
+    "print()\n",
+    "\n",
+    "display(Math(r\" (f \\times g)' \\neq f'\\times g' \"))\n",
+    "display(diff(fx*gx).expand() , (diff(fx)*diff(gx)).expand() )\n",
+    "print()\n",
+    "\n",
+    "display(Math(r\" (f \\times g)' = f'\\times g + f \\times g' \"))\n",
+    "display(diff(fx*gx).expand(), (diff(fx)*gx + fx*diff(gx)).expand())"
+   ],
+   "id": "9e2efd288e7a466",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Eq(f(x), 7*x**4 - 5*x**2 + 2*x + 3)"
+      ],
+      "text/latex": "$\\displaystyle f{\\left(x \\right)} = 7 x^{4} - 5 x^{2} + 2 x + 3$"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Eq(g(x), x**5 + 4*x**2)"
+      ],
+      "text/latex": "$\\displaystyle g{\\left(x \\right)} = x^{5} + 4 x^{2}$"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle  (f + g)' = f' + g' $"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5*x**4 + 28*x**3 - 2*x + 2"
+      ],
+      "text/latex": "$\\displaystyle 5 x^{4} + 28 x^{3} - 2 x + 2$"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5*x**4 + 28*x**3 - 2*x + 2"
+      ],
+      "text/latex": "$\\displaystyle 5 x^{4} + 28 x^{3} - 2 x + 2$"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle  (f \\times g)' \\neq f'\\times g' $"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": [
+       "63*x**8 - 35*x**6 + 180*x**5 + 15*x**4 - 80*x**3 + 24*x**2 + 24*x"
+      ],
+      "text/latex": "$\\displaystyle 63 x^{8} - 35 x^{6} + 180 x^{5} + 15 x^{4} - 80 x^{3} + 24 x^{2} + 24 x$"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": [
+       "140*x**7 - 50*x**5 + 234*x**4 - 80*x**2 + 16*x"
+      ],
+      "text/latex": "$\\displaystyle 140 x^{7} - 50 x^{5} + 234 x^{4} - 80 x^{2} + 16 x$"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle  (f \\times g)' = f'\\times g + f \\times g' $"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": [
+       "63*x**8 - 35*x**6 + 180*x**5 + 15*x**4 - 80*x**3 + 24*x**2 + 24*x"
+      ],
+      "text/latex": "$\\displaystyle 63 x^{8} - 35 x^{6} + 180 x^{5} + 15 x^{4} - 80 x^{3} + 24 x^{2} + 24 x$"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "data": {
+      "text/plain": [
+       "63*x**8 - 35*x**6 + 180*x**5 + 15*x**4 - 80*x**3 + 24*x**2 + 24*x"
+      ],
+      "text/latex": "$\\displaystyle 63 x^{8} - 35 x^{6} + 180 x^{5} + 15 x^{4} - 80 x^{3} + 24 x^{2} + 24 x$"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    }
+   ],
+   "execution_count": 21
   }
  ],
  "metadata": {
