C123_Area_between_two_curves

--- a/A01_Masteer_Math_By_Coding_in_Python/B06_Graping_Visualization/C59_Drawing_patches_with_polygons.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/B06_Graping_Visualization/C59_Drawing_patches_with_polygons.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-10-20T06:44:05.740450Z",
-     "start_time": "2025-10-20T06:44:05.683902Z"
+     "end_time": "2025-11-01T03:14:34.038968Z",
+     "start_time": "2025-11-01T03:14:33.981716Z"
     }
    },
    "cell_type": "code",
@@ -16,7 +16,7 @@
     "y1 = np.array([\n",
     "    [1, 1], [2, 3], [3, 1]\n",
     "])\n",
-    "poly = Polygon(y1, facecolor='m', alpha=0.3, edgecolor='k')\n",
+    "poly = Polygon(y1, fc='m', alpha=0.3, ec='k')\n",
     "\n",
     "y2 = np.array([\n",
     "    [2, 2], [2.5, 3.7], [3.5, 1]\n",
@@ -52,7 +52,7 @@
      }
     }
    ],
-   "execution_count": 55
+   "execution_count": 5
   },
   {
    "metadata": {
