--- a/A01_Masteer_Math_By_Coding_in_Python/B12_Linear_algebra/C131_Matrix_multiplication.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/B12_Linear_algebra/C131_Matrix_multiplication.ipynb
@@ -1,15 +1,109 @@
 {
  "cells": [
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-02T03:16:09.998407Z",
+     "start_time": "2025-11-02T03:16:09.987001Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "7601e29313254605"
+   "source": [
+    "from numpy import random, shape, dot, zeros\n",
+    "from sympy import Matrix, latex\n",
+    "from IPython.display import Math\n",
+    "\n",
+    "A = random.randint(1, 10, (3, 4))\n",
+    "B = random.randint(1, 10, (4, 5))\n",
+    "\n",
+    "\n",
+    "def pm(m): return latex(Matrix(m))\n",
+    "\n",
+    "\n",
+    "def dm(m): return display(Math(m))\n",
+    "\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "dm(rf\"{pm(A)} \\times {pm(B)} = {pm(A@B)}\")\n",
+    "\n",
+    "\n",
+    "def mul_two_matrix(head, foot):\n",
+    "    h_shape = shape(head)\n",
+    "    f_shape = shape(foot)\n",
+    "\n",
+    "    if h_shape[1] != f_shape[0]:\n",
+    "        raise ValueError('Matrix must be square')\n",
+    "\n",
+    "    row = h_shape[0]\n",
+    "    col = f_shape[1]\n",
+    "\n",
+    "    result = zeros((row, col), dtype=int)\n",
+    "\n",
+    "    for i in range(row):\n",
+    "        for j in range(col):\n",
+    "            result[i, j] = dot(head[i, :], foot[:, j])\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "print()\n",
+    "\n",
+    "dm(rf\"{pm(mul_two_matrix(A, B) - A@B)}\")\n"
+   ],
+   "id": "7601e29313254605",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle \\left[\\begin{matrix}2 & 4 & 6 & 6\\\\9 & 1 & 2 & 7\\\\9 & 6 & 7 & 5\\end{matrix}\\right] \\times \\left[\\begin{matrix}3 & 2 & 7 & 8 & 9\\\\4 & 1 & 3 & 7 & 6\\\\7 & 6 & 8 & 8 & 3\\\\4 & 6 & 5 & 6 & 9\\end{matrix}\\right] = \\left[\\begin{matrix}88 & 80 & 104 & 128 & 114\\\\73 & 73 & 117 & 137 & 156\\\\120 & 96 & 162 & 200 & 183\\end{matrix}\\right]$"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ],
+      "text/latex": "$\\displaystyle \\left[\\begin{matrix}0 & 0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0 & 0\\\\0 & 0 & 0 & 0 & 0\\end{matrix}\\right]$"
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    }
+   ],
+   "execution_count": 107
   }
  ],
- "metadata": {},
+ "metadata": {
+  "kernelspec": {
+   "name": "python3",
+   "language": "python",
+   "display_name": "Python 3 (ipykernel)"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
