C136_Solving_a_system_of_equations

--- a/A01_Masteer_Math_By_Coding_in_Python/A00_nameming.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/A00_nameming.ipynb
@@ -4,7 +4,11 @@
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-11-03T03:03:12.865736Z",
+     "start_time": "2025-11-03T03:03:11.675018Z"
+    }
    },
    "source": [
     "def convert_to_notebook_filename(chapter_name):\n",
@@ -46,8 +50,16 @@
     "notebook_filename = convert_to_notebook_filename(user_input_chapter_name)\n",
     "print(f\"{notebook_filename}\")"
    ],
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C136_Solving_a_system_of_equations.ipynb\n"
+     ]
+    }
+   ],
+   "execution_count": 1
   }
  ],
  "metadata": {
