--- a/A01_Masteer_Math_By_Coding_in_Python/A00_nameming.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/A00_nameming.ipynb
@@ -2,14 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
-    "collapsed": true,
     "ExecuteTime": {
      "end_time": "2025-11-03T03:03:12.865736Z",
      "start_time": "2025-11-03T03:03:11.675018Z"
-    }
+    },
+    "collapsed": true
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Caaa.ipynb\n"
+     ]
+    }
+   ],
    "source": [
     "def convert_to_notebook_filename(chapter_name):\n",
     "    \"\"\"\n",
@@ -49,36 +59,26 @@
     "# 함수 호출 및 결과 출력\n",
     "notebook_filename = convert_to_notebook_filename(user_input_chapter_name)\n",
     "print(f\"{notebook_filename}\")"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "C136_Solving_a_system_of_equations.ipynb\n"
-     ]
-    }
-   ],
-   "execution_count": 1
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
