초등 1-2 4자리 수 읽고 쓰기

--- a/A01_Masteer_Math_By_Coding_in_Python/A00_nameming.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/A00_nameming.ipynb
@@ -56,7 +56,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
