--- a/A01_Masteer_Math_By_Coding_in_Python/B14_Number theory/C153_Counting_perfect_numbers.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/B14_Number theory/C153_Counting_perfect_numbers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "df06d28e",
    "metadata": {},
    "outputs": [
@@ -18,18 +18,17 @@
     "from math import sqrt\n",
     "\n",
     "\n",
-    "nums = range(2, 10000 + 1);\n",
-    "answers : list[int]  = []\n",
+    "nums = range(2, 10000 + 1)\n",
+    "answers: list[int] = []\n",
     "\n",
     "for num in nums:\n",
-    "    divisors : set[int] = {1}\n",
+    "    divisors: set[int] = {1}\n",
     "    for divisor in range(2, int(sqrt(num) + 1)):\n",
     "        if num % divisor == 0:\n",
     "            divisors.update({divisor, num//divisor})\n",
     "    if num == sum(divisors):\n",
     "        answers += [num]\n",
-    "print(answers)\n",
-    "\n"
+    "print(answers)"
    ]
   },
   {
@@ -55,7 +54,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
