--- a/A01_Masteer_Math_By_Coding_in_Python/B14_Number theory/C154_Euclid's_Pythagorean_triplets.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/B14_Number theory/C154_Euclid's_Pythagorean_triplets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "fb04beb6",
    "metadata": {},
    "outputs": [
@@ -32,8 +32,8 @@
     "        b += [2*m*n]\n",
     "        c += [m**2 + n**2]\n",
     "\n",
-    "figure(figsize=(9,6))\n",
-    "scatter(a, b , c=c, marker='o', alpha=.5, lw=.5, ec='k')\n",
+    "figure(figsize=(9, 6))\n",
+    "scatter(a, b, c=c, marker='o', alpha=.5, lw=.5, ec='k')\n",
     "axis('off')\n",
     "show()"
    ]
@@ -72,7 +72,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
