--- a/A01_Masteer_Math_By_Coding_in_Python/B14_Number theory/C155_Fermat's_theorem.ipynb
+++ b/A01_Masteer_Math_By_Coding_in_Python/B14_Number theory/C155_Fermat's_theorem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "bb5dbead",
    "metadata": {},
    "outputs": [
@@ -30,7 +30,7 @@
     "for x, y in product(ints, ints):\n",
     "    Z[x-1, y-1] = (x**3 + y**3)**(1/3)\n",
     "\n",
-    "zInts = Z%1 == 0\n",
+    "zInts = Z % 1 == 0\n",
     "\n",
     "fig, ax = subplots(2, 2, figsize=(9, 9))\n",
     "ax = ax.ravel()\n",
@@ -42,7 +42,7 @@
     "\n",
     "for x, y in product(ints, ints):\n",
     "    Z[x-1, y-1] = (x**2 + y**2)**(1/2)\n",
-    "zInts = Z%1 == 0\n",
+    "zInts = Z % 1 == 0\n",
     "\n",
     "ax[2].imshow(Z)\n",
     "ax[2].set_title(r'$z = \\sqrt{x^2 + y^2}$')\n",
@@ -59,7 +59,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
