--- a/A00_SejongClass/B01_수학/C01_초등1-2학년/D1_수와_연산.ipynb
+++ b/A00_SejongClass/B01_수학/C01_초등1-2학년/D1_수와_연산.ipynb
@@ -2,35 +2,115 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a93f762e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def read_korean_number(n):\n",
+    "    digits = [\"영\", \"일\", \"이\", \"삼\", \"사\", \"오\", \"육\", \"칠\", \"팔\", \"구\"] # 숫자값\n",
+    "    units = [\"천\", \"백\", \"십\"] # 자릿값\n",
+    "\n",
+    "    if n == 0 :\n",
+    "        return digits[0]\n",
+    "\n",
+    "    length = 4\n",
+    "    num_str = str(n).zfill(length)      # 4자리로 맞추기: 7 → '0007'\n",
+    "    result = \"\"\n",
+    "\n",
+    "    for idx in range(length):\n",
+    "        num = int(num_str[idx])\n",
+    "        if num == 0:\n",
+    "            continue\n",
+    "        elif num == 1 and idx != length-1:      # 천, 백, 십 자리\n",
+    "            result += units[idx]        # 자릿값만\n",
+    "        elif idx == length-1:           # 일의자리\n",
+    "            result += digits[num]       # 숫자값만\n",
+    "        else:\n",
+    "            result += digits[num] + units[idx]  # 자릿값 + 숫자값\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "\n",
+    "def parse_korean_number(text):\n",
+    "    digits = [\"영\", \"일\", \"이\", \"삼\", \"사\", \"오\", \"육\", \"칠\", \"팔\", \"구\"]\n",
+    "    result = [\"0\", \"0\", \"0\", \"0\"]  # 천, 백, 십, 일 자리\n",
+    "    units = [\"천\", \"백\", \"십\"]\n",
+    "\n",
+    "    for unit_index, unit in enumerate(units):\n",
+    "        if unit in text:\n",
+    "            idx = text.index(unit)\n",
+    "            if idx > 0 and text[idx - 1] in digits:\n",
+    "                result[unit_index] = str(digits.index(text[idx - 1]))\n",
+    "            else:\n",
+    "                result[unit_index] = \"1\"\n",
+    "\n",
+    "    # 일의 자리 처리: 마지막 글자가 숫자값 이면 일의 자리\n",
+    "    if text and text[-1] in digits:\n",
+    "        result[3] = str(digits.index(text[-1]))\n",
+    "\n",
+    "    return int(\"\".join(result))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "dfa8aab4",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0045 → 사십오 -> 45 , ✅\n",
-      "0081 → 팔십일 -> 81 , ✅\n",
-      "0075 → 칠십오 -> 75 , ✅\n",
-      "0023 → 이십삼 -> 23 , ✅\n",
-      "0037 → 삼십칠 -> 37 , ✅\n",
-      "0621 → 육백이십일 -> 621 , ✅\n",
-      "0826 → 팔백이십육 -> 826 , ✅\n",
-      "0413 → 사백십삼 -> 413 , ✅\n",
-      "0625 → 육백이십오 -> 625 , ✅\n",
-      "0451 → 사백오십일 -> 451 , ✅\n",
-      "0535 → 오백삼십오 -> 535 , ✅\n",
-      "0585 → 오백팔십오 -> 585 , ✅\n",
-      "9126 → 구천백이십육 -> 9126 , ✅\n",
-      "1898 → 천팔백구십팔 -> 1898 , ✅\n",
-      "8345 → 팔천삼백사십오 -> 8345 , ✅\n",
-      "7987 → 칠천구백팔십칠 -> 7987 , ✅\n",
-      "9787 → 구천칠백팔십칠 -> 9787 , ✅\n",
-      "1863 → 천팔백육십삼 -> 1863 , ✅\n",
-      "8824 → 팔천팔백이십사 -> 8824 , ✅\n",
-      "5852 → 오천팔백오십이 -> 5852 , ✅\n",
-      "0000 → 영 -> 0 , ✅\n",
+      "구십칠 -> 0097\n",
+      "오십 -> 0050\n",
+      "오십육 -> 0056\n",
+      "이십오 -> 0025\n",
+      "구 -> 0009\n",
+      "칠백이십사 -> 0724\n",
+      "사백육십이 -> 0462\n",
+      "팔백오십구 -> 0859\n",
+      "오백구십일 -> 0591\n",
+      "백육십오 -> 0165\n",
+      "구백팔십사 -> 0984\n",
+      "백육십칠 -> 0167\n",
+      "육천구백십오 -> 6915\n",
+      "오천삼백사십팔 -> 5348\n",
+      "칠천사백구 -> 7409\n",
+      "천 -> 1000\n",
+      "칠천백칠십칠 -> 7177\n",
+      "사천백이십육 -> 4126\n",
+      "팔천사백구십삼 -> 8493\n",
+      "이천삼백삼십사 -> 2334\n",
+      "영 -> 0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "from random import randint\n",
+    "nums = [randint(0, 100) for _ in range(5)]\n",
+    "nums = nums + [randint(100, 1000) for _ in range(7)]\n",
+    "nums = nums + [randint(1000, 10000) for _ in range(8)] + [0]\n",
+    "\n",
+    "# 예시 출력\n",
+    "for num in nums:\n",
+    "    text = read_korean_number(num)\n",
+    "    result = parse_korean_number(text)\n",
+    "    is_same = num == result\n",
+    "    # print(f\"{num:04d} → {text} -> {result} , {\"✅\" if is_same else \"🚨\"}\")\n",
+    "    print(f\"{text} -> {result:04d}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "65709732",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "0000 → 영 -> 0 , ✅\n",
       "0001 → 일 -> 1 , ✅\n",
       "0010 → 십 -> 10 , ✅\n",
@@ -51,66 +131,6 @@
     }
    ],
    "source": [
-    "def read_korean_number(n):\n",
-    "    if not (0 <= n <= 9999):\n",
-    "        return \"0~9999 사이의 숫자만 지원됩니다.\"\n",
-    "\n",
-    "    units = [\"일\", \"십\", \"백\", \"천\"]\n",
-    "    digits = [\"영\", \"일\", \"이\", \"삼\", \"사\", \"오\", \"육\", \"칠\", \"팔\", \"구\"]\n",
-    "\n",
-    "    result = \"\"\n",
-    "    num_str = str(n).zfill(4)  # 4자리로 맞추기: 7 → '0007'\n",
-    "\n",
-    "    for i in range(4):\n",
-    "        digit = int(num_str[i])\n",
-    "        unit_index = 3 - i\n",
-    "        if digit == 0:\n",
-    "            continue\n",
-    "        if digit == 1:\n",
-    "            result += units[unit_index]\n",
-    "        else: # 2 ~ 9\n",
-    "            if unit_index == 0:\n",
-    "                result += digits[digit]\n",
-    "            else:\n",
-    "                result += digits[digit] + units[unit_index]\n",
-    "\n",
-    "    return result if result else digits[0]\n",
-    "\n",
-    "\n",
-    "def parse_korean_number(text):\n",
-    "    digits = [\"영\", \"일\", \"이\", \"삼\", \"사\", \"오\", \"육\", \"칠\", \"팔\", \"구\"]\n",
-    "    result = [\"0\", \"0\", \"0\", \"0\"]  # 천, 백, 십, 일 자리\n",
-    "    units = [\"천\", \"백\", \"십\"]\n",
-    "\n",
-    "    for unit_index, unit in enumerate(units):\n",
-    "        if unit in text:\n",
-    "            idx = text.index(unit)\n",
-    "            if idx > 0 and text[idx - 1] in digits:\n",
-    "                result[unit_index] = str(digits.index(text[idx - 1]))\n",
-    "            else:\n",
-    "                result[unit_index] = \"1\"\n",
-    "\n",
-    "    # 일의 자리 처리: 마지막 글자가 숫자값 이면 일의 자리\n",
-    "    if text and text[-1] in digits:\n",
-    "        result[3] = str(digits.index(text[-1]))\n",
-    "\n",
-    "    return int(\"\".join(result))\n",
-    "\n",
-    "\n",
-    "\n",
-    "from random import randint\n",
-    "nums = [randint(0, 100) for _ in range(5)]\n",
-    "nums = nums + [randint(100, 1000) for _ in range(7)]\n",
-    "nums = nums + [randint(1000, 10000) for _ in range(8)] + [0]\n",
-    "\n",
-    "# 예시 출력\n",
-    "for num in nums:\n",
-    "    text = read_korean_number(num)\n",
-    "    result = parse_korean_number(text)\n",
-    "    is_same = num == result\n",
-    "    print(f\"{num:04d} → {text} -> {result} , {\"✅\" if is_same else \"🚨\"}\")\n",
-    "\n",
-    "\n",
     "from itertools import product\n",
     "combinations = list(product([0, 1], repeat=4))\n",
     "numbers = [int(\"\".join(map(str, c))) for c in combinations]\n",
