--- a/A00_SejongClass/B01_수학/C01_초등1-2학년/D1_수와_연산.ipynb
+++ b/A00_SejongClass/B01_수학/C01_초등1-2학년/D1_수와_연산.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 457,
    "id": "a93f762e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def read_korean_number(n):\n",
-    "    digits = [\"영\", \"일\", \"이\", \"삼\", \"사\", \"오\", \"육\", \"칠\", \"팔\", \"구\"] # 숫자값\n",
-    "    units = [\"천\", \"백\", \"십\"] # 자릿값\n",
+    "    digits = [\"영\", \"일\", \"이\", \"삼\", \"사\", \"오\", \"육\", \"칠\", \"팔\", \"구\"]  # 숫자값\n",
+    "    units = [\"천\", \"백\", \"십\"]  # 자릿값\n",
     "\n",
-    "    if n == 0 :\n",
+    "    if n == 0:\n",
     "        return digits[0]\n",
     "\n",
     "    length = 4\n",
@@ -29,32 +29,53 @@
     "        else:\n",
     "            result += digits[num] + units[idx]  # 자릿값 + 숫자값\n",
     "\n",
-    "    return result\n",
-    "\n",
-    "\n",
-    "def parse_korean_number(text):\n",
-    "    digits = [\"영\", \"일\", \"이\", \"삼\", \"사\", \"오\", \"육\", \"칠\", \"팔\", \"구\"]\n",
-    "    result = [\"0\", \"0\", \"0\", \"0\"]  # 천, 백, 십, 일 자리\n",
-    "    units = [\"천\", \"백\", \"십\"]\n",
-    "\n",
-    "    for unit_index, unit in enumerate(units):\n",
-    "        if unit in text:\n",
-    "            idx = text.index(unit)\n",
-    "            if idx > 0 and text[idx - 1] in digits:\n",
-    "                result[unit_index] = str(digits.index(text[idx - 1]))\n",
-    "            else:\n",
-    "                result[unit_index] = \"1\"\n",
-    "\n",
-    "    # 일의 자리 처리: 마지막 글자가 숫자값 이면 일의 자리\n",
-    "    if text and text[-1] in digits:\n",
-    "        result[3] = str(digits.index(text[-1]))\n",
-    "\n",
-    "    return int(\"\".join(result))"
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 458,
+   "id": "43348586",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "156"
+      ]
+     },
+     "execution_count": 458,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def parse_korean_number(input):\n",
+    "    digits = [\"영\", \"일\", \"이\", \"삼\", \"사\", \"오\", \"육\", \"칠\", \"팔\", \"구\"]  # 숫자값\n",
+    "    units = [\"천\", \"백\", \"십\"]  # 자릿값\n",
+    "\n",
+    "    result = [\"0\", \"0\", \"0\", \"0\"]  # 천[0], 백[1], 십[2], 일[3]의 자리\n",
+    "    for unit_idx, unit in enumerate(units):\n",
+    "        if unit in input:\n",
+    "            input_idx = input.index(unit)\n",
+    "            digit = input[input_idx - 1]\n",
+    "            if input_idx > 0 and digit in digits:\n",
+    "                result[unit_idx] = str(digits.index(digit))\n",
+    "            else:\n",
+    "                result[unit_idx] = \"1\"\n",
+    "\n",
+    "    # 일의 자리 처리: 마지막 글자가 숫자값 이면 일의 자리\n",
+    "    if input and input[-1] in digits:\n",
+    "        result[3] = str(digits.index(input[-1]))\n",
+    "\n",
+    "    return int(\"\".join(result))\n",
+    "\n",
+    "parse_korean_number(\"백오십육\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 463,
    "id": "dfa8aab4",
    "metadata": {},
    "outputs": [
@@ -62,32 +83,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "구십칠 -> 0097\n",
-      "오십 -> 0050\n",
-      "오십육 -> 0056\n",
-      "이십오 -> 0025\n",
-      "구 -> 0009\n",
-      "칠백이십사 -> 0724\n",
-      "사백육십이 -> 0462\n",
-      "팔백오십구 -> 0859\n",
-      "오백구십일 -> 0591\n",
-      "백육십오 -> 0165\n",
-      "구백팔십사 -> 0984\n",
-      "백육십칠 -> 0167\n",
-      "육천구백십오 -> 6915\n",
-      "오천삼백사십팔 -> 5348\n",
-      "칠천사백구 -> 7409\n",
-      "천 -> 1000\n",
-      "칠천백칠십칠 -> 7177\n",
-      "사천백이십육 -> 4126\n",
-      "팔천사백구십삼 -> 8493\n",
-      "이천삼백삼십사 -> 2334\n",
+      "칠십 -> 0070\n",
+      "구십팔 -> 0098\n",
+      "사십이 -> 0042\n",
+      "사십 -> 0040\n",
+      "육십육 -> 0066\n",
+      "이백이십이 -> 0222\n",
+      "오백팔십오 -> 0585\n",
+      "이백십구 -> 0219\n",
+      "구백삼십팔 -> 0938\n",
+      "이백육십육 -> 0266\n",
+      "육백오십사 -> 0654\n",
+      "백구십오 -> 0195\n",
+      "이천삼백팔십오 -> 2385\n",
+      "삼천팔백일 -> 3801\n",
+      "육천칠백오십이 -> 6752\n",
+      "이천칠백구십 -> 2790\n",
+      "천이백육십사 -> 1264\n",
+      "천팔백이십사 -> 1824\n",
+      "천육백삼십팔 -> 1638\n",
+      "칠천사백구십삼 -> 7493\n",
       "영 -> 0000\n"
      ]
     }
    ],
    "source": [
     "from random import randint\n",
+    "\n",
     "nums = [randint(0, 100) for _ in range(5)]\n",
     "nums = nums + [randint(100, 1000) for _ in range(7)]\n",
     "nums = nums + [randint(1000, 10000) for _ in range(8)] + [0]\n",
@@ -98,12 +120,12 @@
     "    result = parse_korean_number(text)\n",
     "    is_same = num == result\n",
     "    # print(f\"{num:04d} → {text} -> {result} , {\"✅\" if is_same else \"🚨\"}\")\n",
-    "    print(f\"{text} -> {result:04d}\")\n"
+    "    print(f\"{text} -> {result:04d}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 460,
    "id": "65709732",
    "metadata": {},
    "outputs": [
